compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__type_annotations.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1738
expression: "fn inc(x: a) { x + 1 }"
snapshot_kind: text
---
----- SOURCE CODE
fn inc(x: a) { x + 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:16
  │
1 │ fn inc(x: a) { x + 1 }
  │                ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    a
