compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__type_holes2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1705
expression: "\n@external(erlang, \"a\", \"b\")\nfn main() -> List(_)\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "a", "b")
fn main() -> List(_)


----- ERROR
error: Unexpected type hole
  ┌─ /src/one/two.gleam:3:19
  │
3 │ fn main() -> List(_)
  │                   ^ I need to know what this is

We need to know the exact type here so type holes cannot be used.
