compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__type_holes3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1716
expression: "\n@external(erlang, \"a\", \"b\")\nfn main(x: List(_)) -> Nil\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "a", "b")
fn main(x: List(_)) -> Nil


----- ERROR
error: Unexpected type hole
  ┌─ /src/one/two.gleam:3:17
  │
3 │ fn main(x: List(_)) -> Nil
  │                 ^ I need to know what this is

We need to know the exact type here so type holes cannot be used.
