compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__type_vars_must_be_declared.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1690
expression: "type A(a) { A }\ntype B = a"
snapshot_kind: text
---
----- SOURCE CODE
type A(a) { A }
type B = a

----- ERROR
error: Unknown type
  ┌─ /src/one/two.gleam:2:10
  │
2 │ type B = a
  │          ^ Did you mean `A`?

The type `a` is not defined or imported in this module.
